--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,55 @@
-*{box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
-img{
-    display: block;
-    max-width: 100%;
+img {
+  display: block;
+  max-width: 100%;
 }
 
-a{
-    text-decoration: none;
-    color: inherit;
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
 ul {
-    list-style: none;
-    padding-left: 0%;
-    margin-top: 0%;
-    margin-bottom: 0;
+  list-style: none;
+  padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
-body{
-    margin: 0;
-    font-family: sans-serif;
+body {
+  margin: 0;
+  font-family: sans-serif;
+  background-color: #111;
+  color: aliceblue;
+}
+
+.icon-menu {
+  width: 30px;
+}
+
+.menu {
+  display: none;
+  flex-direction: column;
+  width: 100px;
+  justify-content: space-between;
+  background-color: steelblue;
+  padding: 0 1rem;
+}
+
+@media screen and (width>=768px) {
+  .menu {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+  }
+}
+.menu__item {
+  padding: 0.8rem 0;
+}
+
+.show {
+  display: flex;
 }
